--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col">
           <div class="d-flex justify-content-center p-1 p-sm-2 p-md-3">
-            <button type="button" class="btn btn-outline-danger" id="btnOpenModal">
+            <button type="button" class="btn btn-outline-danger openModalButton" id="btnOpenModal">
               <span class="btnText h1">Пройди тест и получи результат</span>
             </button>
           </div>
